<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    
    <string name="one_player">One Player</string>
    <string name="two_players">Two Players</string>
    <string name="select_num_players">Select number of players</string>
    <string name="select_difficulty">Select difficulty</string>
    <string name="tap_to_start">Tap board to start</string>
        
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="easy_mode">Easy Mode</string>
    <string name="hard_mode">Hard Mode</string>
    
    <string name="x_wins">X Wins!</string>
    <string name="o_wins">O Wins!</string>
    <string name="tie">Tie Game!</string>
    <string name="start_new_game">Select new game</string>
    
    <!-- Error -->
	<string name="not_button_view">View incorrectly assigned, should be Button</string>

</resources>
