<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/newgame"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/new_game" />

    <LinearLayout
        android:id="@+id/num_players"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/newgame"
        android:layout_alignRight="@+id/newgame"
        android:layout_below="@+id/newgame" >

        <Button
            android:id="@+id/one_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one_player" />

        <Button
            android:id="@+id/two_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two_players" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/newgame"
        android:layout_alignRight="@+id/newgame"
        android:layout_below="@+id/num_players" >

        <Button
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/easy" />

        <Button
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hard" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficulty"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/select_num_players"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/cpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="20sp" />

    <TableLayout
        android:id="@+id/board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newgame"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/newgame" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:textSize="30sp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:textSize="30sp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:textSize="30sp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:textSize="30sp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:textSize="30sp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:textSize="30sp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:textSize="30sp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/button_8"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:textSize="30sp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/button_9"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:textSize="30sp"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>
</RelativeLayout>